--- a/notebooks/Craigslist_web_scraping.ipynb
+++ b/notebooks/Craigslist_web_scraping.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "279eab9f",
    "metadata": {},
    "source": [
     "# Concept\n",
@@ -22,9 +23,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "6e2bb7b3",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -43,9 +43,8 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "27bac8e6",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -73,6 +72,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d102d48",
    "metadata": {},
    "source": [
     "# Inputs"
@@ -81,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "930cc0b6",
    "metadata": {
     "collapsed": true
    },
@@ -94,6 +95,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96807839",
    "metadata": {},
    "source": [
     "# Functions"
@@ -102,9 +104,8 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "84ed38a8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_file_name(title):\n",
@@ -198,6 +199,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5958b89b",
    "metadata": {},
    "source": [
     "# Scraping"
@@ -206,9 +208,8 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "34dbd8a7",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -262,9 +263,8 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "b05c6380",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -303,6 +303,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7587257",
    "metadata": {},
    "source": [
     "# Debugging"
@@ -311,9 +312,8 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "41cd098b",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1007,9 +1007,8 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "7a99729e",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1026,6 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1ce8b53",
    "metadata": {
     "collapsed": true
    },
@@ -1035,7 +1035,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1049,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
