updated missing values

--- a/notebooks/Craigslist_EDA.ipynb
+++ b/notebooks/Craigslist_EDA.ipynb
@@ -2080,6 +2080,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "e797b005",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "listing_nh                 0\n",
+       "listing_city               0\n",
+       "listing_price              0\n",
+       "listing_sqft               0\n",
+       "animals_cats               0\n",
+       "animals_dogs               0\n",
+       "furnished                  0\n",
+       "smoking                    0\n",
+       "wheelchair accessible      0\n",
+       "has_AC                     0\n",
+       "hasEVCharging              0\n",
+       "laundry_in_bldg            0\n",
+       "laundry_in_unit            0\n",
+       "laundry_has_hookup         0\n",
+       "laundry_onsite             0\n",
+       "laundry_not_onsite         0\n",
+       "parking_carport            0\n",
+       "parking_attached_garage    0\n",
+       "parking_detached_garage    0\n",
+       "parking_offstreet          0\n",
+       "parking_street             0\n",
+       "parking_valet              0\n",
+       "parking_none               0\n",
+       "rent_period_daily          0\n",
+       "rent_period_weekly         0\n",
+       "rent_period_monthly        0\n",
+       "housing_condo              0\n",
+       "housing_apt                0\n",
+       "housing_cottage            0\n",
+       "housing_duplex             0\n",
+       "housing_flat               0\n",
+       "housing_house              0\n",
+       "housing_inlaw              0\n",
+       "housing_townhouse          0\n",
+       "is_rent_controlled         0\n",
+       "pets_allowed               0\n",
+       "is_remodelled              0\n",
+       "has_amenities              0\n",
+       "walk_score                 0\n",
+       "transit_score              0\n",
+       "bike_score                 0\n",
+       "no_bedrooms                0\n",
+       "no_bathrooms               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()\n",
+    "# No missing values"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c0d76a1f",
    "metadata": {},
