--- a/notebooks/Craigslist_Data_Wrangling .ipynb
+++ b/notebooks/Craigslist_Data_Wrangling .ipynb
@@ -2413,10 +2413,10 @@
     "There are about 30% of listing_sqft data missing and 3% of addresses missing.\n",
     "To handle the missing listing_sqft values: \n",
     "1. Try and extract listing_sqft from the title of the craigslist post\n",
-    "2. otherwise in the EDA stage, impute the square footage value with the median value for the given number of bedroom/bathroom combo\n",
+    "2. otherwise in the preprocessing stage, impute the square footage value with the median value for the given number of bedroom/bathroom combo\n",
     "\n",
     "To handle the missing address values: the address is used to get the walk score, transit score and bike score.\n",
-    "1. Impute the mean walk score, transit score and bike score for the listing neighborhood"
+    "1. In the preprocessing stage, impute the mean walk score, transit score and bike score for the listing neighborhood"
    ]
   },
   {
@@ -3225,13 +3225,6 @@
    "source": [
     "df.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
