updated image markdown

--- a/notebooks/Craigslist_Preprocessing_Modeling_combined-nh_models.ipynb
+++ b/notebooks/Craigslist_Preprocessing_Modeling_combined-nh_models.ipynb
@@ -8,14 +8,10 @@
    "source": [
     " # Craigslist Capstone Project - Preprocessing and Modeling\n",
     "\n",
-    "This capstone project aims to develop supervised machine learning models to predict the market rent price of a property based on relevant features found on a craigslist ad for the San Francisco Bay Area. Listing data was scraped from Craigslist from August to October 2022. The metros of interest are San Francisco, Peninsula, East Bay in the Bay Area.\n",
+    "This capstone project aims to develop supervised machine learning models to predict the market rent price of a property based on relevant features found on a craigslist ad for the San Francisco Bay Area. Listing data was scraped from Craigslist from August to October 2022. The metros of interest are San Francisco, Peninsula, East Bay as shown in this Bay Area map:\n",
     "\n",
-    "<br>\n",
+    "<img src=\"https://github.com/melissavhan/CapstoneTwoProject/blob/96c0464b62a9355c4c37f61c78c83c1337888718/references/Simple_bay_area_metros.JPG?raw=true\" alt=\"Simple_bay_area_metros.JPG\" width=\"500\"/>\n",
     "\n",
-    "<div>\n",
-    "<img src=\"https://github.com/melissavhan/CapstoneTwoProject/blob/96c0464b62a9355c4c37f61c78c83c1337888718/references/Simple_bay_area_metros.JPG\" width=\"500\"/>\n",
-    "</div>\n",
-    "<br>\n",
     "\n",
     "Prior to this notebook, [2. Data Wrangling](https://github.com/melissavhan/CapstoneTwoProject/blob/e38988da9187f9000b49eb6948fd67ea25cd89af/notebooks/Craigslist_Data_Wrangling%20.ipynb) was done on the scraped craigslist data and [3. Exploratory data analysis](https://github.com/melissavhan/CapstoneTwoProject/blob/e38988da9187f9000b49eb6948fd67ea25cd89af/notebooks/Craigslist_EDA.ipynb) was performed and correlations between variables plotted.\n",
     "\n",
